CHANGES

release 74.2
 - xml specific lims module, st::api::lims, is split into a generic lims wrapper,
   st::api::lims, and xml parser, st::api::lims::xml
 - a new parser/generator for Illumina-style samplesheets,
   npg_tracking::illumina::run::lims::samplesheet
 - bait finder update to cope with white space around bait name RT#334881

release 74.1
 - improvements and patches to tests
 - apache httpd conf file for running tracking server on centrally supported
   ubuntu precise vm
 - build script extended to deploy wtsi_local folder, which has apache conf files
 - in tests, explicitly clear existing db connection before resetting the tables and loading fixtures;
   otherwise, an very long wait (as set by GLOBAL wait_timeout ) occurs, see RT#336398
   for some reason this wait only occurs on MySQL servers v 5.5.30 and above
 - correct skip message for a test that accesses live reference repository

release 74.0
 - removed unnecessary separate log from apache configuration file

release 73.9
 - cgi scripts that are linked from the main tracking web app are moved to this
     project together with an apache configuration file for servers on sfweb nodes
 - apache configuration file for sfweb nodes updated:
     bed files are not visible
     all tracking-related services sre run on port 9000, port 9080 is not used
     the cgi-bin url component is mapped to the cgi-bin directory underb the npg
       root /software/solexa/npg, where all npg cgi scripts are deployed to
     npg own modules are taken from the default deployment location,
       /software/solexa/npg/lib/perl5
     htdocs directory is mapped to the deployed /software/solexa/npg/htdocs

release 73.8
 - make dependency on IO::All::FTP explicit

release 73.7
 - propagate caller environment to scrits running under daemons
   as a part of a move to perl 5.14.2
 - warnings under per l5.14.2 tidied up
 - unnecessary '##no critic' statements removed

release 73.6